--- a/mbdyn/include/mbdefs.h.in
+++ b/mbdyn/include/mbdefs.h.in
@@ -38,6 +38,7 @@
 
 #define BINPATH                 "%BINPATH%"
 #define OCTAVEPATH		"%OCTAVEPATH%"
+#define OCTAVEBINPATH "%OCTAVEBINPATH%"
 
 #endif /* MBDEFS_H */
 
