--- a/mbdyn/modules/module-hid/Makefile.inc
+++ b/mbdyn/modules/module-hid/Makefile.inc
@@ -10,5 +10,6 @@
 #
 ###############################################################################
 
+# FIXME: this flag is needed by g++ 4.8 to include <cstdint>
 MODULE_INCLUDE="-std=c++0x"
 
