--- a/mbdyn/modules/module-udunits/Makefile.inc
+++ b/mbdyn/modules/module-udunits/Makefile.inc
@@ -2,7 +2,7 @@
 MODULE_DEPENDENCIES=
 #
 # "Historical" library
-MODULE_LINK=-ludunits
+#MODULE_LINK=-ludunits
 #
 # Ubuntu distributes a libudunits2-dev that needs -ludunits2
-#MODULE_LINK=-ludunits2
+MODULE_LINK=-ludunits2
