--- a/mbdyn/mbdyn/Makefile.am
+++ b/mbdyn/mbdyn/Makefile.am
@@ -49,6 +49,7 @@ $(GINACLIB_LIBS) \
 @THREAD_LIBS@ \
 @NETCDF_LIBS@ \
 @UDUNITS_LIBS@ \
+@RTAI_LDFLAGS@ \
 @RT_LIBS@ \
 @ANN_LIBS@ \
 @OCTAVE_LIBS@ \
