--- a/mbdyn/modules/module-octave/Makefile.inc
+++ b/mbdyn/modules/module-octave/Makefile.inc
@@ -1,5 +1,6 @@
 ## $Header$
 MODULE_DEPENDENCIES=octave_object.lo
-LIBPATH=/usr/lib/octave-3.2.4/
+#LIBPATH=/usr/lib/octave-3.2.4/
 #LIBPATH=/usr/lib/debug/usr/lib/octave-3.2.4/
-MODULE_LINK=-L$(LIBPATH) -Wl,-rpath=$(LIBPATH) -loctinterp -loctave -lcruft
+#MODULE_LINK=-L$(LIBPATH) -Wl,-rpath=$(LIBPATH) -loctinterp -loctave # -lcruft
+MODULE_LINK=-loctinterp -loctave # -lcruft
